--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "rewrites": [
+  "version": 2,
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://your-backend-url.com/api/$1"
+      "src": "/api/(.*)",
+      "dest": "/api/index.mjs"
     }
   ]
 }
