--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
     "@vercel/analytics": "^0.1.6",
   },
   "devDependencies": {
