--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
     "remark-gfm": "^4.0.0",
-    "@vercel/analytics": "^0.1.6",
+    "@vercel/analytics": "^0.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
