--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
-    "openai": "^4.67.3"
+    "openai": "^4.67.3",
+    "mongodb": "^4.0.0" 
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
